<resources>
    <string name="app_name">MyAppPortfolio</string>
    <string name="action_settings">Settings</string>
    <string name="spotify_streamer">Spotify Streamer</string>
    <string name="my_nano_degree_apps">My Nano Degree Apps!</string>
    <string name="my_own_app">Cap Stone : My Own App</string>
    <string name="xyz_reader">XYZ Reader</string>
    <string name="build_it_bigger">Build IT Bigger</string>
    <string name="library_app">Library App</string>
    <string name="scores_app">Scores App</string>
</resources>
